# Client_Server_Application

./: CMakeLists.txt  Doxyfile  README.md  test_script.sh
include/client/: connection_manager.h
include/server/: session.h  session_manager.h
include/utils/: crypto.hpp  types.h
src/client/: client.cpp  connection_manager.cpp
src/server/: server.cpp  session.cpp  session_manager.cpp
